@@ -1,3 +1,8 @@
+2007-10-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* MakeHelper.pm: Add Glib::MakeHelper::get_configure_requires_yaml
+	to generate YAML suitable for use with EU::MM's EXTRA_META.
+
 2007-09-24	kaffeetisch
 
 	* CodeGen.pm
